mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:5.0
          name: mongodb
          ports:
            - containerPort: 27017
---
kind: Service
apiVersion: v1
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  type: NodePort
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
