sample-springboot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-springboot-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-springboot      
  template:
    metadata:
      labels:
        app: sample-springboot        
    spec:
      containers:
      - name: sample-springboot      
        image: springio/gs-spring-boot-docker
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: sample-springboot-service
spec:
  selector:
    app: sample-springboot
  type: LoadBalancer  
  ports:
  - port: 89
    targetPort: 8080
    nodePort: 30005
